2007-06-17  Satoshi Nakagawa <artension@gmail.com>

	Changed DCC receiving path to user's desktop.

2007-06-17  Satoshi Nakagawa <artension@gmail.com>

	Added initial settings of the DCC window splitter.

2007-06-15  Satoshi Nakagawa <artension@gmail.com>

	Changed whois parameters to acquire detail information.

2007-06-15  Satoshi Nakagawa <artension@gmail.com>

	Added the nick changing dialog.

2007-06-15  Satoshi Nakagawa <artension@gmail.com>

	Changed colors of DCC file receiving items.

2007-06-15  Satoshi Nakagawa <artension@gmail.com>

	Added DCC file receiving.
	Added DCC dialog size management.

2007-06-15  Satoshi Nakagawa <artension@gmail.com>

	* Objective-C sources:
	Changed tab style to 2 soft tabs.

2007-06-10  Satoshi Nakagawa <artension@gmail.com>

	The first version 0.1 released.