@@ -1,5 +1,9 @@
 2007-06-17  Satoshi Nakagawa <artension@gmail.com>
 
+	Changed to resolve my address using resolv.rb.
+
+2007-06-17  Satoshi Nakagawa <artension@gmail.com>
+
 	Changed DCC receiving path to user's desktop.
 
 2007-06-17  Satoshi Nakagawa <artension@gmail.com>
